# several

./: .gitignore  AGENTS.md  README.md  hardware_and_resources.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: PRD.md  command_specification.md  filesystem_and_storagedesgin.md  local_architecture.md  packaging_and_distribution.md  security_model.md  technical_design.md  testing_strategy.md  user_documentation.md
src/several/: __main__.py  cli.py
src/several/adapters/: __init__.py  parser.py  registry.py  runner.py
src/several/config/: __init__.py
src/several/core/: __init__.py  config.py  db.py  logging.py  paths.py  task.py  workspace.py
src/several/tui/: app.py
tests/: test_cli.py  test_cli_additional.py  test_main_module.py  test_parser.py  test_paths_config_db.py  test_runner.py  test_task_execution.py  test_task_reporter_resilience.py  test_workspace.py
